--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+/.idea
+
+/vendor/assets/.bowerrc
+/vendor/assets/.bower.json
+/vendor/assets/boert_components/
